# QcDe23

./: .gitignore  LICENSE  README.md  baseline.py  baseline_model.ipynb  masking.ipynb  masking_script.py  masking_trials.ipynb  setup.cfg
src/QcCell/: baseline.py  masking_script.py
