[metadata]
name = QcCell
version = 0.0.1
authors = 
    {name="Ida Büschel", email="ida.bueschel@gmail.com", affiliation="Technical University of Munich"}
description = Package for AI-based quality control of cell cultures using microscopic imaging and flow cytometric data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ida8997/QcDe23
project_urls =
    Bug Tracker = https://github.com/ida8997/QcDe23/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    matplotlib
    opencv-python
    seaborn
    scikit-learn
    pandas
    scipy

[options.extras_require]
napari =
    napari

[options.packages.find]
where = src